--- a/aether_purrsist/aether.css
+++ b/aether_purrsist/aether.css
@@ -60,3 +60,14 @@ a {
   font-size: 200%;
   color: #5FB3B3;
 }
+
+pre {
+  display: block;
+  overflow-x: auto;
+  font-size: 0.9em;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
